# anvil

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
anvil/: __init__.py
anvil/ante/: __init__.py  certify.py  ledger.py
anvil/bridge/: __init__.py  featurize.py  server.py
anvil/encoder/: __init__.py  __main__.py  cards.py  cardtext.py  transform.py  vocab_mtg.json
anvil/evals/: __init__.py  d8_report.py
anvil/grindstone/: __init__.py
anvil/heads/: __init__.py
anvil/mentor/: __init__.py
anvil/policy/: __init__.py  model.py  sampling.py
anvil/pool/: __init__.py  __main__.py  build.py  decklist.py  fetch.py  forge_db.py
anvil/state/: __init__.py  tokens.py
anvil/store/: __init__.py  __main__.py  castplan.py  trajectories.py
anvil/training/: __init__.py  calibrate_pass.py  dataset.py  diagnose_value.py  eval_x.py  finetune_value.py  methods_v1.json  rl.py  sa_vocab_v1.json  selfplay.py  train.py
anvil/tutor/: __init__.py
data/pool/: flex.txt
docs/: forge-ai-field-guide.md  project-map.html
docs/decisions/: ADR-0001-prior-work-responses.md  ADR-0002-fork-api-gate-resolution.md  ADR-0003-m0-closeout.md  ADR-0004-m1-scope.md  ADR-0005-d3-label-mask-semantics.md  (+19 more)
scripts/: arms_report.py  early_doom.py  final_read.py  paired_arms.py  tau_curve.py  validate_rejected_intent.py
tests/: test_cardtext.py  test_castplan.py  test_critic_loop.py  test_dataset_combat.py  test_pairs.py  test_pool.py  test_rl.py  test_sampling.py  test_seeds.py  test_serve_parity.py  test_server_combat.py  test_store.py  test_transform.py  test_vram_elasticity.py
(+69 files in other folders)
