[project]
name = "anvil"
version = "0.0.1"
description = "A neural agent for Magic: The Gathering built on the Forge rules engine"
requires-python = ">=3.11"
license = "GPL-3.0-or-later"
dependencies = [
    "grpcio>=1.81.1",
    "grpcio-tools>=1.81.1",
    "protobuf>=6.33.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["anvil"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
